[package]
name = "bitcoin-da"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
serde = { workspace = true }
hex = "0.4.2"
bitcoin_hashes = "0.12.0"
dotenv = "0.15.0"
